// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstancesListSelectors should pass existing query data through response: existing query data 1`] = `
Object {
  "query": Object {
    "a": "b",
    "c": "d",
  },
}
`;

exports[`InstancesListSelectors should pass existing state data through response: existing state data 1`] = `
Object {
  "data": Array [],
  "meta": "meta field",
  "query": Object {},
  "testing": "lorem ipsum",
}
`;

exports[`InstancesListSelectors should pass minimal data on missing a reducer response: missing reducer error 1`] = `
Object {
  "query": Object {},
}
`;

exports[`InstancesListSelectors should return specific selectors: selectors 1`] = `
Object {
  "instancesList": [Function],
  "makeInstancesList": [Function],
}
`;
